Collapse resolved comments by default (#1133)

--- a/web/src/components/DiffViewer/DiffViewer.module.scss
+++ b/web/src/components/DiffViewer/DiffViewer.module.scss
@@ -152,6 +152,7 @@
         left: 0;
         z-index: 2;
         overflow: visible;
+        line-height: 20px;
       }
 
       .d2h-code-side-line {
@@ -160,6 +161,14 @@
       }
 
       tr {
+        td:first-of-type {
+          z-index: 2;
+        }
+
+        td:last-of-type > div {
+          z-index: 0;
+        }
+
         [data-annotation-for-line] {
           height: 14px;
           width: 14px;
@@ -384,6 +393,16 @@
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     max-width: calc(var(--page-container-width) - 48px);
+
+    &.hidden {
+      height: var(--block-height);
+      content-visibility: auto;
+      contain-intrinsic-size: auto var(--line-height);
+
+      * {
+        display: none !important;
+      }
+    }
   }
 }
 
